# kowltheria

./: .gitignore  .gitmodules  CMakeLists.txt
data/: culture_names.txt  main.cfg
data/env/: main.scm
data/env/lib/: saves.scm
dit/: event.ui  histfig.ui  main.cpp  meta.cpp  meta.hpp  meta.ui  overlook.cpp  overlook.hpp  overlook.ui  world.cpp  world.hpp  world.ui  worldview.cpp  worldview.hpp  worldview.ui
docs/: Doxyfile.in
proto/: etheriasaves.proto
src/: .#save.cpp  actor.cpp  actor.hpp  cbase.hpp  culture.cpp  culture.hpp  help.cpp  help.hpp  itemtypes.cpp  lisp.cpp  lisp.hpp  main.cpp  menus.cpp  menus.hpp  planet.cpp  planet.hpp  planetmenu.cpp  rng.cpp  rng.hpp  save.cpp  save.hpp  scm.cpp  scm.hpp  system.cpp  templates.hpp  wizard.cpp  wizard.hpp  world.cpp  world.hpp  worldgen.cpp
tier0/: cbase.hpp  itemtypes.cpp  itemtypes.hpp  math.cpp  math.hpp  rng.cpp  rng.hpp
